# docs/swagger.json
@@ -16,7 +16,7 @@
         },
         "version": "1.0.0"
     },
-    "host": "gw.verifire.com/subs",
+    "host": "gw.verifire.dev/subs",
     "basePath": "/",
     "paths": {
         "/v1/invoices/{payment_method}": {
@@ -54,7 +54,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.InvoiceRequest"
+                            "$ref": "#/definitions/rest.InvoiceRequest"
                         }
                     }
                 ],
@@ -64,13 +64,13 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/handlers.Response"
+                                    "$ref": "#/definitions/rest.Response"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/handlers.InvoiceResponse"
+                                            "$ref": "#/definitions/rest.InvoiceResponse"
                                         }
                                     }
                                 }
@@ -80,25 +80,25 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/handlers.Response"
+                            "$ref": "#/definitions/rest.Response"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/handlers.Response"
+                            "$ref": "#/definitions/rest.Response"
                         }
                     },
                     "422": {
                         "description": "Unprocessable Entity",
                         "schema": {
-                            "$ref": "#/definitions/handlers.Response"
+                            "$ref": "#/definitions/rest.Response"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/handlers.Response"
+                            "$ref": "#/definitions/rest.Response"
                         }
                     }
                 }
@@ -123,7 +123,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/handlers.Response"
+                                    "$ref": "#/definitions/rest.Response"
                                 },
                                 {
                                     "type": "object",
@@ -145,7 +145,7 @@
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/handlers.Response"
+                            "$ref": "#/definitions/rest.Response"
                         }
                     }
                 }
@@ -175,7 +175,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/handlers.Response"
+                                    "$ref": "#/definitions/rest.Response"
                                 },
                                 {
                                     "type": "object",
@@ -191,13 +191,13 @@
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/handlers.Response"
+                            "$ref": "#/definitions/rest.Response"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/handlers.Response"
+                            "$ref": "#/definitions/rest.Response"
                         }
                     }
                 }
@@ -205,49 +205,6 @@
         }
     },
     "definitions": {
-        "handlers.InvoiceRequest": {
-            "type": "object",
-            "required": [
-                "durationSubscription",
-                "kindSubscription"
-            ],
-            "properties": {
-                "durationSubscription": {
-                    "allOf": [
-                        {
-                            "$ref": "#/definitions/models.DurationSubscription"
-                        }
-                    ],
-                    "example": "12m"
-                },
-                "kindSubscription": {
-                    "allOf": [
-                        {
-                            "$ref": "#/definitions/models.KindSubscription"
-                        }
-                    ],
-                    "example": "business"
-                }
-            }
-        },
-        "handlers.InvoiceResponse": {
-            "type": "object",
-            "properties": {
-                "paymentUrl": {
-                    "type": "string",
-                    "example": "https://api.monobank.ua"
-                }
-            }
-        },
-        "handlers.Response": {
-            "type": "object",
-            "properties": {
-                "data": {},
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
         "models.DurationSubscription": {
             "type": "string",
             "enum": [
@@ -291,6 +248,49 @@
                     "$ref": "#/definitions/models.KindSubscription"
                 },
                 "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "rest.InvoiceRequest": {
+            "type": "object",
+            "required": [
+                "durationSubscription",
+                "kindSubscription"
+            ],
+            "properties": {
+                "durationSubscription": {
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/models.DurationSubscription"
+                        }
+                    ],
+                    "example": "12m"
+                },
+                "kindSubscription": {
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/models.KindSubscription"
+                        }
+                    ],
+                    "example": "business"
+                }
+            }
+        },
+        "rest.InvoiceResponse": {
+            "type": "object",
+            "properties": {
+                "paymentUrl": {
+                    "type": "string",
+                    "example": "https://api.monobank.ua"
+                }
+            }
+        },
+        "rest.Response": {
+            "type": "object",
+            "properties": {
+                "data": {},
+                "message": {
                     "type": "string"
                 }
             }
